# gpu-rendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.org
egl/: CMakeLists.txt  a.c  egl.c  egl.h  scene.c  scene.h  shader.c  shader.h  test.c  test01.c  test02-stream.sh  test02.c  test02.sh  test03.c  test04.c
egl/shaders/: shader.v.glsl  simple.f.glsl  simple.v.glsl  wire_shader.v.glsl
h264/test/: CMakeLists.txt  test.c
vgl-docker/: run.sh
